# tts-ops

./: .editorconfig  .gitignore  CICD.md  CONTRIBUTING.md  Chart.yaml  Dockerfile.agent  README.md  TESTING.md  __init__.py  api.py  docker-compose.arm64.yml  docker-compose.yml  load_test_tts.py  logging.py  model_loader.py  pyproject.toml  rbac.yaml  run_local_tts.sh  services.yaml  test_agent_app.py  test_tts_service.py
.github/: dependabot.yml
.github/workflows/: README.md  ci-build-push.yml  ci-helm-validate.yml  ci-performance.yml  ci-provenance.yml  ci-security-deps.yml  ci-security-images.yml  ci-smoke-test.yml  ci-test.yml
.kiro/hooks/: commit-spec-completion.kiro.hook
.kiro/specs/apple-silicon-gpu-support/: design.md  requirements.md  tasks.md
.kiro/specs/github-actions-cicd/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
docs/: ci-cd-runbook.md
infra/docker/: Dockerfile.agent  Dockerfile.tts  QUICKSTART.md  README.md  build-multiarch.sh
infra/k8s/helm/voice-agent/: values.yaml
infra/k8s/helm/voice-agent/templates/: _helpers.tpl  deployment-agent.yaml  deployment-tts.yaml  hpa.yaml  ingress.yaml  service-agent.yaml  service-tts.yaml
infra/k8s/prometheus-grafana/: prometheus.yml
scripts/: README.md  check_performance_regression.py  debug_model_load.py  generate_build_metadata.py  load_test_tts.py  run_local_agent.sh  smoke_test.py
src/agent_app/: api.py  llm_client.py  tts_client.py
src/common/: __init__.py  config.py  device_utils.py  logging.py  metrics.py
src/tts_service/: model_loader.py  server.py  streaming.py
tests/: conftest.py  test_agent_app.py  test_config.py  test_integration.py  test_metrics.py  test_tts_service.py  test_websocket.py
tests/common/: test_config.py  test_device_utils.py  test_device_utils_properties.py  test_metrics.py
tests/tts_service/: test_model_loader.py
tests/workflows/: __init__.py  test_helper_scripts.py  test_metadata_generation.py  test_metadata_generation_properties.py  test_regression_detection_edge_cases.py  test_regression_detection_properties.py  test_smoke_test.py  test_workflow_validation.py
