[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibevoice-realtime-agent"
version = "0.1.0"
description = "Production-grade realtime AI voice agent using VibeVoice-Realtime"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["tts", "text-to-speech", "voice", "ai", "realtime", "streaming"]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "transformers>=4.36.0",
    "accelerate>=0.25.0",
    "soundfile>=0.12.1",
    "numpy>=1.26.0",
    "prometheus-client>=0.19.0",
    "structlog>=24.1.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "tenacity>=8.2.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "locust>=2.20.0",
    "hypothesis>=6.92.0",
]
anthropic = [
    "anthropic>=0.18.0",
]
openai = [
    "openai>=1.10.0",
]
all = [
    "vibevoice-realtime-agent[dev,anthropic,openai]",
]

[project.scripts]
tts-serve = "tts_service.server:main"
agent-serve = "agent_app.api:main"

[project.urls]
Homepage = "https://github.com/yourorg/vibevoice-realtime-agent"
Documentation = "https://github.com/yourorg/vibevoice-realtime-agent#readme"
Repository = "https://github.com/yourorg/vibevoice-realtime-agent"
Issues = "https://github.com/yourorg/vibevoice-realtime-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_app", "src/tts_service", "src/common"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
    "B905",   # zip strict
]

[tool.ruff.per-file-ignores]
"tests/**/*" = ["ARG001"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests",
    "slow: marks tests as slow",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
